--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
 <body>
+    <div id="mydiv"></div>
     <script type="text/babel">
         function Test()
         {
