--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     </head>
 <body>
     <div id="mydiv"></div>
+    <h1 class="text-3xl font-bold underline">
+        Hello world! This is Tailwind CSS Header!
+      </h1>
     <script type="text/babel">
+        
         function Test()
         {
             const bla=()=>{alert("Hello React")}
