--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script> 
+    import { tailwindcss } from '../node_modules/tailwindcss/dist/tailwind.min.css';
+    </script>
     </head>
 <body>
     <div id="mydiv"></div>
