add tailwind config to index.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script> 
-    import { tailwindcss } from '../node_modules/tailwindcss/dist/tailwind.min.css';
+    import { tailwindcss } from '../node_modules/@tailwindcss/forms/dist/index.js';
     </script>
     </head>
 <body>
